// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sidebar > Force isOpen false 1`] = `
<div>
  <aside
    class="styled__SidebarWrapper-sc-12bdvz6-4 dknLTb"
  >
    <button
      class="styled__ButtonWrapper-sc-1fzdj0n-0 gnWbsF styled__SidebarButton-sc-12bdvz6-0 eGMTRw"
    >
      <svg
        class="styled__SidebarButtonContent-sc-12bdvz6-1 jQJmfF"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
        />
      </svg>
    </button>
    <div
      class="styled__SidebarContentWrapper-sc-12bdvz6-2 GAJIw"
    >
      <div
        class="styled__SidebarContent-sc-12bdvz6-3 hcfyuD"
      />
    </div>
  </aside>
</div>
`;

exports[`Sidebar > Force isOpen true 1`] = `
<div>
  <aside
    class="styled__SidebarWrapper-sc-12bdvz6-4 cmAXsJ"
  >
    <button
      class="styled__ButtonWrapper-sc-1fzdj0n-0 gnWbsF styled__SidebarButton-sc-12bdvz6-0 eGMTRw"
    >
      <svg
        class="styled__SidebarButtonContent-sc-12bdvz6-1 jQJmfF"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
        />
      </svg>
    </button>
    <div
      class="styled__SidebarContentWrapper-sc-12bdvz6-2 GAJIw"
    >
      <div
        class="styled__SidebarContent-sc-12bdvz6-3 hcfyuD"
      />
    </div>
  </aside>
</div>
`;

exports[`Sidebar > Render 1`] = `
<div>
  <aside
    class="styled__SidebarWrapper-sc-12bdvz6-4 cmAXsJ"
  >
    <button
      class="styled__ButtonWrapper-sc-1fzdj0n-0 gnWbsF styled__SidebarButton-sc-12bdvz6-0 eGMTRw"
    >
      <svg
        class="styled__SidebarButtonContent-sc-12bdvz6-1 jQJmfF"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
        />
      </svg>
    </button>
    <div
      class="styled__SidebarContentWrapper-sc-12bdvz6-2 GAJIw"
    >
      <div
        class="styled__SidebarContent-sc-12bdvz6-3 hcfyuD"
      />
    </div>
  </aside>
</div>
`;
